feat: add generic document reporting engine and JasperReports support (#182)
* feat: add generic document reporting engine and JasperReports support

* move translation to respective files